tests/ui/const-generics/mgca/type-const-value-type-mismatch.current.stderr
error[E0053]: method `arr` has an incompatible type for trait
  --> $DIR/type-const-value-type-mismatch.rs:22:5
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an array with a size of 0, found one with a size of const { Self::LEN }
   |
note: type in trait
  --> $DIR/type-const-value-type-mismatch.rs:15:5
   |
LL |     fn arr() -> [u8; Self::LEN];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn() -> [u8; 0]`
              found signature `fn() -> [u8; const { Self::LEN }]`

error: the constant `0` is not of type `usize`
  --> $DIR/type-const-value-type-mismatch.rs:19:5
   |
LL |     type const LEN: usize = 0u8;
   |     ^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `u8`

error[E0308]: mismatched types
  --> $DIR/type-const-value-type-mismatch.rs:22:17
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |        ---      ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[u8; const { Self::LEN }]`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0053, E0308.
For more information about an error, try `rustc --explain E0053`.
